Defined base layout style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/styles/app.css" />
   </head>
   <body>
-    <div class="app-layout">
+    <!-- <div class="app-layout">
       <div class="app-header">
         <div class="app-header__top"></div>
 
@@ -26,6 +26,9 @@
       </div>
 
       <div class="app-footer"></div>
+    </div> -->
+    <div class="app-root">
+      <div class="app-layout">CSS Grid Layout</div>  
     </div>
   </body>
 </html>
