Updated base grid layout

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
       <div class="app-footer"></div>
     </div> -->
     <div class="app-root">
-      <div class="app-layout">CSS Grid Layout</div>  
+      <div class="app-layout">
+        <div class="app-header-bg"></div>
+        <div class="app-header"></div>
+        <div class="app-nav"></div>
+        <div class="app-footer-bg"></div>
+        <div class="app-pre-footer"></div>
+        <div class="app-footer"></div>
+      </div>
     </div>
   </body>
 </html>
