--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div class="app-header-bg"></div>
         <div class="app-header"></div>
         <div class="app-nav"></div>
+        <div class="app-content"></div>
         <div class="app-footer-bg"></div>
         <div class="app-pre-footer"></div>
         <div class="app-footer"></div>
