Updated markup and styles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
       <div class="app-footer"></div>
     </div> -->
     <div class="app-root">
-      <div class="app-layout">CSS Grid Layout</div>  
+      <div class="app-layout">
+        <div class="app-header">
+          <div class="app-header__content"></div>
+        </div>
+        <div class="app-nav"></div>
+        <div class="app-subheader"></div>
+        <div class="app-prefooter"></div>
+        <div class="app-footer"></div>
+      </div>  
     </div>
   </body>
 </html>
