--- a/index.html
+++ b/index.html
@@ -8,33 +8,44 @@
     <link rel="stylesheet" href="assets/styles/app.css" />
   </head>
   <body>
-    <!-- <div class="app-layout">
-      <div class="app-header">
-        <div class="app-header__top"></div>
-
-        <div class="app-header__bottom"></div>
-      </div>
-
-      <div class="app-content">
-        <div class="app-container">
-          <main class="app-main">
-            <div class="app-main__header"></div>
-
-            <div class="app-main__body"></div>
-          </main>
-        </div>
-      </div>
-
-      <div class="app-footer"></div>
-    </div> -->
     <div class="app-root">
       <div class="app-layout">
         <div class="app-header-bg"></div>
+
         <div class="app-header"></div>
+
         <div class="app-nav"></div>
+
+        <div class="app-sub-header"></div>
+
         <div class="app-content"></div>
+
+        <div class="app-content-block-1"></div>
+
+        <div class="app-content-block-2"></div>
+
+        <div class="app-content-block-3"></div>
+
+        <div class="app-content-block-4"></div>
+
+        <div class="app-content-block-5"></div>
+
+        <div class="app-content-block-6"></div>
+
+        <div class="app-content-block-7"></div>
+
+        <div class="app-content-block-8"></div>
+
+        <div class="app-content-block-9"></div>
+
+        <div class="app-content-block-10"></div>
+
+        <div class="app-content-block-11"></div>
+
         <div class="app-footer-bg"></div>
+
         <div class="app-pre-footer"></div>
+
         <div class="app-footer"></div>
       </div>
     </div>
