Added nav style

--- a/src/template.html
+++ b/src/template.html
@@ -59,7 +59,29 @@
           </div>
         </div>
 
-        <div class="app-nav"></div>
+        <div class="app-nav">
+          <ul class="app-nav__menu">
+            <li class="app-nav__menu-item">
+              <a href="/">Dashboard</a>
+            </li>
+            <li class="app-nav__menu-item">
+              <a href="/">Menu Item 2</a>
+            </li>
+            <li class="app-nav__menu-item">
+              <a href="/">Menu Item 3</a>
+            </li>
+            <li class="app-nav__menu-item">
+              <a href="/">Menu Item 4</a>
+            </li>
+            <li class="app-nav__menu-item">
+              <a href="/">Menu Item 5</a>
+            </li>
+          </ul>
+
+          <div class="app-nav__toolbar">
+            <button>Purchase</button>
+          </div>
+        </div>
 
         <div class="app-sub-header">
           <div class="app-sub-header__info">
